--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,6 +1,457 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:percent="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.micheal.tabbedexperiment.Item">
 
-</LinearLayout>
+    <android.support.percent.PercentRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/Item_Main_Layout">
+
+        <TextView
+            android:text="@string/I_Header"
+            android:id="@+id/Item_Header"
+            android:textAllCaps="true"
+            android:textSize="20sp"
+            android:gravity="center_vertical"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%' />
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c1"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Header">
+
+            <TextView
+                android:text="@string/I_1"
+                android:id="@+id/Item_c1"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%' />
+
+            <EditText
+                android:id="@+id/Item_Note_c1_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c1_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c1_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c1_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c1_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c1_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c1_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c1_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c1_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c1_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c1_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c2"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Group_c1">
+
+            <TextView
+                android:text="@string/I_2"
+                android:id="@+id/Item_c2"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%' />
+
+            <EditText
+                android:id="@+id/Item_Note_c2_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c2_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c2_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c2_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c2_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c2_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c2_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c2_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c2_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c2_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c2_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c3"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Group_c2">
+
+
+            <TextView
+                android:text="@string/I_3"
+                android:id="@+id/Item_c3"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%' />
+
+            <EditText
+                android:id="@+id/Item_Note_c3_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c3_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c3_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c3_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c3_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c3_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c3_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c3_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c3_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c3_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c3_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c4"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Group_c3">
+
+
+            <TextView
+                android:text="@string/I_4"
+                android:id="@+id/Item_c4"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%'
+                android:textStyle="normal|italic" />
+
+            <EditText
+                android:id="@+id/Item_Note_c4_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c4_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c4_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c4_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c4_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c4_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c4_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c4_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c4_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c4_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c4_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c5"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Group_c4">
+
+
+            <TextView
+                android:text="@string/I_5"
+                android:id="@+id/Item_c5"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%'
+                android:textStyle="normal|italic" />
+
+            <EditText
+                android:id="@+id/Item_Note_c5_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c5" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c5_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c5_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c5_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c5_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c5_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c5_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c5_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c5_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c5_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c5_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+        <android.support.percent.PercentRelativeLayout
+            android:id="@+id/Item_Group_c6"
+            percent:layout_widthPercent='100%'
+            percent:layout_heightPercent='4%'
+            android:layout_below="@id/Item_Group_c5">
+
+
+            <TextView
+                android:text="@string/I_6"
+                android:id="@+id/Item_c6"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='40%' />
+
+            <EditText
+                android:id="@+id/Item_Note_c6_p1"
+                android:inputType="text"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_c6" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c6_p2"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c6_p1" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c6_p3"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c6_p2" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c6_p4"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c6_p3" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c6_p5"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c6_p4" />
+
+            <EditText
+                android:inputType="text"
+                android:id="@+id/Item_Note_c6_p6"
+                android:textSize="12sp"
+                android:cursorVisible="true"
+                android:layout_height="match_parent"
+                percent:layout_widthPercent='10%'
+                android:layout_toRightOf="@id/Item_Note_c6_p5" />
+
+        </android.support.percent.PercentRelativeLayout>
+
+    </android.support.percent.PercentRelativeLayout>
+
+</RelativeLayout>
