--- a/app/src/main/res/layout/suspect.xml
+++ b/app/src/main/res/layout/suspect.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:percent="http://schemas.android.com/apk/res-auto"
     android:id="@+id/suspect"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -16,7 +15,7 @@
     <android.support.percent.PercentRelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Main_Layout">
+        android:id="@+id/Suspect_Main_Layout">
 
         <TextView
             android:text="@string/S_Header"
